# Neon-Animated-Eye

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
STL/: NAE-redux-barrel.gcode  NAE-redux-motor-plate.gcode
main/: CMakeLists.txt  blink.c  blink.h  config.h  hall.c  hall.h  homing.c  homing.h  idle.c  idle.h  leds.c  leds.h  main.c  manual_animation.c  manual_animation.h  motor.c  motor.h  neon_flicker.c  neon_flicker.h  next_state.c  state.h
